change fonts email in html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -141,7 +141,7 @@
                                 <!-- Email input -->
                                 <div class="form-outline form-white mb-4">
                                     <input type="email" id="form5Example21" class="form-control" />
-                                    <label class="form-label" for="form5Example21">Email address</label>
+                                    <label class="form-label" for="form5Example21">Email <i class="fa-thin fa-at"></i>address</label>
                                 </div>
                             </div>
                             <!--Grid column-->
