rows and colums and button config

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -89,7 +89,7 @@
     <!--main tasks-->
     <div> 
     <div class="container">
-    <div class="row row-cols-3 " id="result">
+    <div class="row" id="result">
     </div>
     </div>
 
