improves sort and design

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -83,7 +83,7 @@
     
         <div class="sort-contan">
             <span>Sort by priority:</span> 
-            <button id="sortButton" class="sortButton"><i class="fa-solid fa-arrow-up-wide-short"></i></button>
+            <div id="sortButton" class="sortButton"><i class="fa-solid fa-arrow-up-wide-short"></i></div>
         </div>
     </div>
     <!--main tasks-->
